k8s-deployment/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: "2401106"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: server
        image: image: nexus.imcc.com/2401106/server:latest
        ports:
        - containerPort: 5000
