k8s-deployment/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
  namespace: "2401106"
spec:
  selector:
    app: client
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
