k8s-deployment/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service
  namespace: "2401106"
spec:
  selector:
    app: server
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  type: ClusterIP
