k8s-deployment/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "2401106"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: "2401106"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      imagePullSecrets:
      - name: nexus-secret
      containers:
      - name: server
        image: nexus-service-for-docker-hosted-registry.nexus.svc.cluster.local:8085/my-repository/server:latest
        ports:
        - containerPort: 5000
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: server-service
  namespace: "2401106"
spec:
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: "2401106"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      imagePullSecrets:
      - name: nexus-secret
      containers:
      - name: client
        image: nexus-service-for-docker-hosted-registry.nexus.svc.cluster.local:8085/my-repository/client:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: client-service
  namespace: "2401106"
spec:
  selector:
    app: client
  ports:
    - protocol: TCP
      port: 32000
      targetPort: 80
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: "2401106"
spec:
  ingressClassName: nginx
  rules:
  - host: 2401106.imcc.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-service
            port:
              number: 32000
